# kpsr-sdk

./: .gitignore  CMakeLists.txt  KlepsydraSDKConfig.cmake.in  README.md
.github/: dependabot.yml
.github/workflows/: prcodecheck.yml  push.yml
cmake/os/common/: SetCpackDebianVariables.cmake
modules/: CMakeLists.txt
modules/sdk/: CMakeLists.txt
modules/sdk/include/klepsydra/sdk/: container.h  environment.h  event_transform_forwarder.h  function_stats.h  pointer_abstraction_layer_h.h  publication_stats.h  publisher.h  scheduler.h  service.h  service_stats.h  subscriber.h  subscription_stats.h  time_utils.h
modules/sdk/src/: function_stats.cpp  publication_stats.cpp  publisher_base.cpp  service.cpp  service_stats.cpp  subscriber_base.cpp  time_utils.cpp
tests/: CMakeLists.txt
tests/sdk_tests/: CMakeLists.txt
tests/sdk_tests/include/: mock_classes.h
tests/sdk_tests/src/: publisher_tests.cpp  service_tests.cpp  subscriber_tests.cpp
